--- a/style.css
+++ b/style.css
@@ -14,12 +14,33 @@ body{
 .fundoJogo{
     width: 500px;
     height: 600px;
-    display: flex;
+
+    
+    
     justify-content: center;
+    
     align-items: center;
+    
     text-align: center;
+    
     border-radius: 50px;
     background-color: rgb(86, 212, 86);
+}
+
+.fundoTitulo{
+    
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+    border-style: solid;
+}
+
+.fundoTexto{
+    height: 400px;
+    justify-content: center;
+    align-items: center;
+    border-style: solid;
+
 }
 
 
