--- a/style.css
+++ b/style.css
@@ -14,32 +14,42 @@ body{
 .fundoJogo{
     width: 500px;
     height: 600px;
-
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    font-size: 20px;
     
     
-    justify-content: center;
     
-    align-items: center;
-    
-    text-align: center;
     
     border-radius: 50px;
     background-color: rgb(86, 212, 86);
 }
 
 .fundoTitulo{
-    
-    height: 200px;
+    width: 500px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-style: solid;
+    text-align: center;
+
+    
 }
 
 .fundoTexto{
-    height: 400px;
+    width: 500px;
+    height: 500px;
+    
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-style: solid;
+    text-align: center;
+
+    
 
 }
 
