--- a/style.css
+++ b/style.css
@@ -12,23 +12,23 @@ body{
 }
 
 .fundoJogo{
-    width: 500px;
+    max-width: 800px;
     height: 600px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 200;
     font-size: 20px;
-    
-    
-    
-    
+    border-style: solid;
+    border-color: #8b4513;
+    border-width: 15px;
     border-radius: 50px;
     background-color: rgb(86, 212, 86);
 }
 
 .fundoTitulo{
-    width: 500px;
+    width: 800px;
     height: 100px;
     display: flex;
     flex-direction: column;
@@ -40,9 +40,9 @@ body{
 }
 
 .fundoTexto{
-    width: 500px;
+    width: 800px;
     height: 500px;
-    
+    line-height: 50px;    
     display: flex;
     flex-direction: column;
     justify-content: center;
