--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Poppins';
+    src: url('./fonts/Poppins/Poppins-SemiBold.ttf');
+    font-weight: bold;
+}
+
+
 body{
     margin: 0px;
 }
@@ -8,31 +15,28 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    background-color: #033e97;
 }
 
-.fundoJogo{
-    max-width: 800px;
+.fundo-jogo{
+    width: 600px;
     height: 600px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 200;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
     font-size: 20px;
-    border-style: solid;
-    border-color: #8b4513;
-    border-width: 15px;
     border-radius: 50px;
-    box-shadow: 30px 30px;
-    background-color: rgb(86, 212, 86);
+    background-color: #ffff;    
 }
 
-.fundoTitulo{
+.fundo-titulo{
     width: 800px;
     height: 100px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -40,7 +44,7 @@ body{
     
 }
 
-.fundoTexto{
+.fundo-texto{
     width: 800px;
     height: 500px;
     line-height: 50px;    
@@ -57,7 +61,28 @@ body{
 button{
     height: 40px;
     font-size: 18px;
+    margin-top: 20px;
 }
+
+#campo-resposta{
+    margin-top: 20px;
+    width: 100px;
+    height: 100px;
+    font-size: 30px;
+    
+    color: #b65bcb;
+    border-radius: 10px;
+    text-align: center;
+    box-sizing: border-box;
+    border-width: 4px;
+}
+
+#campo-resposta:focus{
+    outline: none;
+    border-color: #b65bcb;
+}
+
+
 #aviso{
     visibility: hidden;
 }
